--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,14 @@
+@keyframes fadeIn{
+    0%{
+        font-size: 10px;
+        opacity: 0%;
+    }
+    100%{
+        font-size:50px;
+        opacity: 100%;
+    }
+}
+
 body{
     padding: 0px;
     margin: 0px;
@@ -23,6 +34,8 @@ header{
     text-shadow: 1px 1px 2px rgb(0, 0, 0);
     color: white;
     font-family: 'Times New Roman', Times, serif;
+
+    animation: fadeIn ease-in 1500ms;
 }
 
 .saludos{
