--- a/css/main.css
+++ b/css/main.css
@@ -9,10 +9,38 @@
     }
 }
 
+@keyframes sideIn{
+    0%{
+        opacity: 0%;
+    }
+    100%{
+        opacity: 100%;
+    }
+}
+
+@keyframes out-in{
+    0%{
+        opacity: 0%;
+        transform: scale(1.5,1.5);
+    }
+    100%{
+        opacity: 100%;
+    }
+}
+
+.animationSideIn{
+    animation: sideIn 1000ms ease-in;
+}
+
+.animationOut-In{
+    animation: out-in ease-in 1000ms;
+}
+
 body{
     padding: 0px;
     margin: 0px;
     box-sizing: content-box;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 header{
@@ -21,6 +49,7 @@ header{
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: rgb(39, 39, 39);
 }
 
 .font-main{
@@ -44,12 +73,25 @@ header{
     color: white;
     text-shadow: 1px 1px 2px black;
 }
+
+.title2{
+    padding: 0.2em;
+    font-weight: bold;
+    font-size: 40px;
+    border-bottom: 3px solid rgb(104, 152, 255);
+    border-left: 20px solid rgb(103, 139, 255);
+}
 /*-------*/
 
 /*colores*/
 
 .bg-main{
     background: linear-gradient(90deg, rgba(16,32,87,1) 0%, rgba(31,98,172,1) 35%, rgba(70,167,255,1) 100%);
+}
+
+.btn-main{
+    background: linear-gradient(0deg, rgba(0,115,184,1) 0%, rgba(159,218,251,1) 100%);
+    color: white;
 }
 
 /*-------*/
@@ -85,4 +127,8 @@ header{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.picture{
+    transform: rotateZ(-3deg);
 }
