--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,18 @@ header{
     color: rgb(39, 39, 39);
 }
 
+footer{
+    width: 100%;
+    height: 15em;
+    background-color: rgba(31,98,172,1);
+    color: white;
+}
+
+.footer{
+    font-style: italic;
+    font-size: 18px;
+}
+
 .banner a{
     text-decoration: none;
 }
@@ -103,6 +115,11 @@ header{
 }
 
 /*-------*/
+
+.text-grey{
+    color: rgb(177, 177, 177);
+}
+
 
 .banner{
     font-size: 28px;
@@ -159,4 +176,13 @@ header{
 
 .user{
     font-style: italic;
+}
+
+.a-comp{
+    list-style: none;
+}
+
+.flexbox-testi{
+    display: flex;
+    justify-content: space-around;
 }
