--- a/css/aboutStyles.css
+++ b/css/aboutStyles.css
@@ -1,9 +1,10 @@
 .photoStyle{
-    height: 20em;
-    width: 370px;
+    height: 18em;
+    width: 320px;
     padding: 0.7em;
     box-shadow: 2px 2px 3px grey;
     transform: rotateZ(-2deg);
+    margin: auto auto;
 }
 
 .firma{
@@ -15,4 +16,14 @@
     font-size: 28px;
     border-radius: 5px;
     box-shadow: 2px 0px 3px grey;
+}
+
+
+@media (max-width: 540px){
+
+    .photoStyle{
+        width: 300px;
+        height: 18em;
+        margin:  auto auto;
+    }
 }
